--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-numpy==2.2.4
-pandas==2.2.3
-streamlit==1.44.0
-pillow==11.1.0
+numpy
+pandas
+streamlit
+pillow
 gdown
 plotly
 tensorflow
 imagehash
-boto3==1.38.8
-botocore==1.38.8
-opencv-python==4.11.0.86
+boto3
+opencv-python
 
 
 
