--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy
+numpy<2.0
 pandas
 streamlit
 pillow
@@ -7,7 +7,7 @@ plotly
 tensorflow
 imagehash
 boto3
-opencv-python-headless==4.7.0.72
+opencv-python==4.7.0.72
 
 
 
